--- a/PrettyHair.UI/MainWindow.xaml
+++ b/PrettyHair.UI/MainWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="buttonOrders" Content="Orders" HorizontalAlignment="Left" Margin="50,29,0,0" VerticalAlignment="Top" Width="75" Click="buttonOrders_Click"/>
+        <Button x:Name="buttonCustomers" Content="Customers" HorizontalAlignment="Left" Margin="50,72,0,0" VerticalAlignment="Top" Width="75" Click="buttonCustomers_Click"/>
+        <Button x:Name="buttonItems" Content="Items" HorizontalAlignment="Left" Margin="50,117,0,0" VerticalAlignment="Top" Width="75" Click="buttonItems_Click"/>
+
     </Grid>
 </Window>
