--- a/PrettyHair.UI/View/Customers.xaml
+++ b/PrettyHair.UI/View/Customers.xaml
@@ -1,15 +1,25 @@
-﻿<Window x:Class="PrettyHair.UI.View.Customer"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PrettyHair.UI.View"
-        mc:Ignorable="d"
-        Title="Customer" Height="300" Width="300">
-    <Grid>
-        <Button x:Name="buttonClose" Content="Close Window" HorizontalAlignment="Left" Margin="42,29,0,0" VerticalAlignment="Top" Width="99" Click="buttonClose_Click"/>
-        <Button x:Name="buttonAddCustomer" Content="Add Customer" HorizontalAlignment="Left" Margin="42,67,0,0" VerticalAlignment="Top" Width="99" Click="buttonAddCustomer_Click"/>
-        <Button x:Name="buttonGetCustomer" Content="Get Customer" HorizontalAlignment="Left" Margin="42,107,0,0" VerticalAlignment="Top" Width="99" Click="buttonGetCustomer_Click"/>
+﻿<UserControl x:Class="PrettyHair.UI.View.Customer"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:PrettyHair.UI.View"
+             xmlns:data="clr-namespace:PrettyHair.UI.ViewModel"
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Array data:CustomersViewModel}">
 
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding Path=FirstName, Mode=OneWay}" Width="100" Margin="1, 1, 1, 1" />
+            </StackPanel>
+            
+        </DataTemplate>
+    </UserControl.Resources>
+    
+    <Grid>
+        <ListBox ItemsSource="{Binding CustomerCollection}" Width="300" Margin="0, 0, 0, 0">
+            <TextBlock Text="{Binding FirstName}" />
+        </ListBox>
     </Grid>
-</Window>
+</UserControl>
