--- a/PrettyHair.UI/View/Orders.xaml
+++ b/PrettyHair.UI/View/Orders.xaml
@@ -1,16 +1,12 @@
-﻿<Window x:Class="PrettyHair.UI.View.Orders"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PrettyHair.UI.View"
-        mc:Ignorable="d"
-        Title="Orders" Height="300" Width="300">
+﻿<UserControl x:Class="PrettyHair.UI.View.Orders"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:PrettyHair.UI.View"
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Button x:Name="buttonClose" Content="Close Window" HorizontalAlignment="Left" Margin="42,29,0,0" VerticalAlignment="Top" Width="99" Click="buttonClose_Click"/>
-        <Button x:Name="buttonCreateOrder" Content="Create Order" HorizontalAlignment="Left" Margin="42,67,0,0" VerticalAlignment="Top" Width="99"/>
-        <Button x:Name="buttonGetOrders" Content="Get Orders" HorizontalAlignment="Left" Margin="42,107,0,0" VerticalAlignment="Top" Width="99"/>
-        <Button x:Name="buttonRemoveOrder" Content="Remove Order" HorizontalAlignment="Left" Margin="42,147,0,0" VerticalAlignment="Top" Width="99"/>
-
+            
     </Grid>
-</Window>
+</UserControl>
