--- a/PrettyHair.UI/View/Customers.xaml
+++ b/PrettyHair.UI/View/Customers.xaml
@@ -4,9 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PrettyHair.UI.View"
-             xmlns:data="clr-namespace:PrettyHair.UI.ViewModel"
+             xmlns:data="clr-namespace:PrettyHair.Core.Entities;assembly=PrettyHair.Core"
+             xmlns:viewModel="clr-namespace:PrettyHair.UI.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type data:Customer}">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Text="{Binding Path=Firstname}"/>
+                <TextBox Text="{Binding Path=Lastname }"/>
+            </StackPanel>            
+        </DataTemplate>
+    </UserControl.Resources>
+    
     <Grid>
+        <ListBox ItemsSource="{Binding CustomerCollection}"/>
     </Grid>
 </UserControl>
