--- a/PrettyHair.UI/View/Items.xaml
+++ b/PrettyHair.UI/View/Items.xaml
@@ -4,9 +4,27 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PrettyHair.UI.View"
+             xmlns:Data="clr-namespace:PrettyHair.Core.Entities;assembly=PrettyHair.Core"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type Data:Item}">
+            <StackPanel Orientation="Horizontal">
+
+               
+                <TextBox Text="{Binding Path=ItemId, Mode=OneWay}" />
+                <TextBox Text="{Binding Path=Description}" />
+                
+            </StackPanel>
+        </DataTemplate>
+
+    </UserControl.Resources>
+
     <Grid>
-            
+        <ListBox ItemsSource="{Binding ItemsCollection}"/>
+
     </Grid>
 </UserControl>
+    
+
