--- a/PrettyHair.UI/View/Customers.xaml
+++ b/PrettyHair.UI/View/Customers.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PrettyHair.UI.View"
-             xmlns:data="clr-namespace:PrettyHair.Core.Entities;assembly=PrettyHair.Core"
+             xmlns:data="clr-namespace:PrettyHair.Domain.Entities;assembly=PrettyHair.Domain"
              xmlns:viewModel="clr-namespace:PrettyHair.UI.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
