--- a/PrettyHair.UI/View/Items.xaml
+++ b/PrettyHair.UI/View/Items.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PrettyHair.UI.View"
-             xmlns:Data="clr-namespace:PrettyHair.Core.Entities;assembly=PrettyHair.Core"
+             xmlns:Data="clr-namespace:PrettyHair.Domain.Entities;assembly=PrettyHair.Domain"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     
