--- a/PrettyHair.UI/View/Orders.xaml
+++ b/PrettyHair.UI/View/Orders.xaml
@@ -4,9 +4,23 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PrettyHair.UI.View"
+             xmlns:Data="clr-namespace:PrettyHair.Core.Entities;assembly=PrettyHair.Core"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type Data:Order}">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Text="{Binding Path=OrderDate, Mode=TwoWay}" Width="120" Margin="5"/>
+                <TextBox Text="{Binding Path=DeliveryDate, Mode=TwoWay}" Width="120" Margin="5"/>
+                <TextBox Text="{Binding Path=CustomerID, Mode=TwoWay}" Width="100" Margin="5"/>
+                <TextBox Text="{Binding Path=Processed, Mode=TwoWay}" Width="100" Margin="5"/>
+                <TextBox Text="{Binding Path=OrderId, Mode=OneWay}" Width="100" Margin="5"/>
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
+
     <Grid>
-            
+        <ListBox ItemsSource="{Binding OrdersCollection}"/>
     </Grid>
 </UserControl>
